--- a/index.html
+++ b/index.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Trivia</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
   
+  <div class="container-fluid">
+    <div class="container startcontainer">
+      <div class="row">
+        <div class=" col-xs-12 img text-center">
+          <img src="assets/img/globe.png" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 text-center">
+          <h2>Welcome to the Video Games Trivia</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 start text-center">
+          <button class="btn btn-primary" id="start">Option Multiple</button>
+        </div>
+      </div>
+    </div>
+    <div class="container questionsContainer"></div>
+  </div>
+
+  <div id="questions">
+    
+  </div>
+
+  <button id="next" class="btn btn-default hidden text-center">Next</button>
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="assets/js/index.js"></script>
 </body>
 </html>
