--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="row">
         <div class="col-xs-12 start text-center">
           <button class="btn btn-primary" id="start">Option Multiple</button>
+          <button class="btn btn-primary" id="start-truefalse">Option True/False</button>
         </div>
       </div>
     </div>
@@ -41,5 +42,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
+   <script type="text/javascript" src="assets/js/truefalse.js"></script>
 </body>
 </html>
