--- a/inicio.html
+++ b/inicio.html
@@ -10,15 +10,7 @@
  
 </head>
 <body>
- <!-- pluggin facebook -->
-  <div id="fb-root"></div>
-  <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.11';
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
+
 
 <div class="container-img container-fluid">
   <div class="inicio row">
@@ -58,19 +50,31 @@
   </div>
 </div>
   
-  <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-  <script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDcbOBeMnGrBIpxwNXCqvCHLcClYK_5l-g",
-    authDomain: "tastyfood-ada3b.firebaseapp.com",
-    databaseURL: "https://tastyfood-ada3b.firebaseio.com",
-    projectId: "tastyfood-ada3b",
-    storageBucket: "tastyfood-ada3b.appspot.com",
-    messagingSenderId: "411922280355"
+<script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+
+ 
+  
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '{433117313805738}',
+      cookie     : true,
+      xfbml      : true,
+      version    : '{v5.0.0}'
+    });
+      
+    FB.AppEvents.logPageView();   
+      
   };
-  firebase.initializeApp(config);
-  </script>
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
